Add new frog and icon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>FROGGER</title>
     <link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+	<link rel="icon" href="images/lilypad.png">
 </head>
 <body>
 	<h1>FROGGER</h1>
