Test README features

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 	<h1>FROGGER</h1>
 	<h3> Curfew: <span id="time-left">30</span></h3>
-    <button id= "button"><img src = "images/START.png"></button> 
+    <button id= "button"></button> 
+	<img src = "images/START.png" id="start">
 <h3 id="result"></h3>
 <h2 id = "result2"></h2>
 <img src = 'images/win.png' id = 'win'>
