--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<h1>FROGGER</h1>
+	<h4>use WASD to move</h4>
 	<h3> Curfew: <span id="time-left">30</span></h3>
     <button id= "button"><img src = "images/START.png" id="start"></button>
 <h3 id="result"></h3>
